--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="active"><a href="#">Главная</a></li>
+                    <li><a href="#about">Проекты</a></li>
+                    <li><a href="#contact">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -38,17 +38,44 @@
 
 <div class="container">
 
-    <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
         <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called the
+            hero unit and three supporting pieces of content. Use it as a starting point to create something more
+            unique.</p>
+
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
     </div>
-<hr>
 
-<footer>
-    <p>&copy; Company 2012</p>
-</footer>
+    <div class="row">
+        <div class="span6">
+            <h2>Heading</h2>
+
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+                euismod. Donec sed odio dui. </p>
+
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+        <div class="span6">
+            <h2>Heading</h2>
+
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+                euismod. Donec sed odio dui. </p>
+
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+
+    </div>
+
+
+    <hr>
+
+    <footer>
+        <p>&copy; Company 2012</p>
+    </footer>
 </div>
 
 
