small and big androcoins images

--- a/index.html
+++ b/index.html
@@ -39,15 +39,20 @@
 <div class="container">
 
     <div class="hero-unit">
-        <h1>Hello, world!</h1>
+        <h1>AndroCoins</h1>
 
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the
-            hero unit and three supporting pieces of content. Use it as a starting point to create something more
-            unique.</p>
+        <p>Простой инструмент для учета Ваших карманных расходов. Интуитивно понятный простой интерфейс пользователя.
+        Гибкая система настройки категорий расходов. Отчеты за различный период времени.</p>
 
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+        <img src="imgs/androcoins_dash_small.png"/>
+        <img src="imgs/androcoins_new_expence_small.png" />
+        <img src="imgs/androcoins_today_small.png" />
+        <img src="imgs/androcoins_today_report_small.png" />
+
+        <p><a class="btn btn-primary btn-large">Узнать больше &raquo;</a></p>
     </div>
 
+    <!--
     <div class="row">
         <div class="span6">
             <h2>Heading</h2>
@@ -69,12 +74,12 @@
         </div>
 
     </div>
-
+    -->
 
     <hr>
 
     <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; Vitaly Gashock 2012</p>
     </footer>
 </div>
 
