--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
     <meta name="description" content="vitaly gashock android projects"/>
 
+    <link href="css/main.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
         body {
@@ -14,6 +15,8 @@
         }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+
+    <script type="text/javascript" src="javascripts/jquery-1.8.0.min.js"></script>
 
     <title>Android Developer</title>
 </head>
@@ -39,42 +42,45 @@
 <div class="container">
 
     <div class="hero-unit">
-        <h1>AndroCoins</h1>
+        <h1 style="color:#336688;">AndroCoins</h1>
+        <hr/>
+        <div class="row-fluid">
+            <div class="span4">
+                <img src="imgs/androcoins_dash_crop.png"/>
+            </div>
+            <div class="span8">
+                <p class="lead"><h3>Держите под контролем Ваши карманные расходы. Всегда.</h3>
+                    <br/>
+                    <ul>
+                        <li><strong>Простой и понятный интерфейс пользователя</strong></li>
+                        <li><strong>Быстрый доступ к основным функциям со стартового экрана</strong></li>
+                        <li><strong>Возможность редактирования введенных расходов</strong></li>
+                        <li><strong>Настраиваемый список категорий расходов</strong></li>
+                        <li><strong>Построение отчетов о расходах</strong></li>
+                    </ul>
+                </p>
 
-        <p>Простой инструмент для учета Ваших карманных расходов. Интуитивно понятный простой интерфейс пользователя.
-        Гибкая система настройки категорий расходов. Отчеты за различный период времени.</p>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
 
-        <img src="imgs/androcoins_dash_small.png"/>
-        <img src="imgs/androcoins_new_expence_small.png" />
-        <img src="imgs/androcoins_today_small.png" />
-        <img src="imgs/androcoins_today_report_small.png" />
+                <div class="row">
+                    <div class="span4">
 
-        <p><a class="btn btn-primary btn-large">Узнать больше &raquo;</a></p>
-    </div>
-
-    <!--
-    <div class="row">
-        <div class="span6">
-            <h2>Heading</h2>
-
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn" href="#">View details &raquo;</a></p>
+                    </div>
+                    <div class="span4"></div>
+                    <div class="span4">
+                        <a class="btn btn-primary btn-large" style="float: right;">Узнать больше &raquo;</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="span6">
-            <h2>Heading</h2>
-
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-
+        <br/>
     </div>
-    -->
 
     <hr>
 
