AndroCoins google play button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset='utf-8'/>
@@ -42,14 +42,14 @@
 <div class="container">
 
     <div class="hero-unit">
-        <h1 style="color:#336688;">AndroCoins</h1>
+        <h1 style="color:#336699;">AndroCoins</h1>
         <hr/>
         <div class="row-fluid">
             <div class="span4">
                 <img src="imgs/androcoins_dash_crop.png"/>
             </div>
             <div class="span8">
-                <p class="lead"><h3>Держите под контролем Ваши карманные расходы. Всегда.</h3>
+                <p class="lead"><h3>Карманные расходы под контролем. Всегда.</h3>
                     <br/>
                     <ul>
                         <li><strong>Простой и понятный интерфейс пользователя</strong></li>
@@ -58,25 +58,32 @@
                         <li><strong>Настраиваемый список категорий расходов</strong></li>
                         <li><strong>Построение отчетов о расходах</strong></li>
                     </ul>
+
+
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+
+                    <div class="row-fluid">
+                        <div class="span4">
+                            <p>
+                            <a href="http://play.google.com/store/apps/details?id=org.androcoins"
+                                    target="_blank">
+                                <img alt="Android app on Google Play"
+                                     src="http://www.android.com/images/brand/android_app_on_play_logo_small.png" />
+                            </a>
+                            </p>
+                        </div>
+                        <div class="span4"></div>
+                        <div class="span4">
+                            <a class="btn btn-primary btn-large" style="float: right;">Узнать больше &raquo;</a>
+                        </div>
+                    </div>
                 </p>
-
-                <br/>
-                <br/>
-                <br/>
-                <br/>
-                <br/>
-                <br/>
-                <br/>
-
-                <div class="row">
-                    <div class="span4">
-
-                    </div>
-                    <div class="span4"></div>
-                    <div class="span4">
-                        <a class="btn btn-primary btn-large" style="float: right;">Узнать больше &raquo;</a>
-                    </div>
-                </div>
             </div>
         </div>
         <br/>
