--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="navbar-inner">
         <div class="container">
 
-            <a class="brand" href="#">just Android developer</a>
+            <a class="brand" href="#">Vitaly Gashock</a>
 
             <div class="nav-collapse">
                 <ul class="nav">
