--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="#">Главная</a></li>
+                    <li class="active"><a href="/">Главная</a></li>
                     <li><a href="#about">Проекты</a></li>
                     <li><a href="#contact">Контакты</a></li>
                 </ul>
