--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <div class="navbar-inner">
         <div class="container">
 
-            <a class="brand" href="#">Vitaly Gashock</a>
+            <a class="brand" href="/">Vitaly Gashock</a>
 
             <div class="nav-collapse">
-                <ul class="nav">
+                <ul class="nav" style="font-size: 12pt;">
                     <li class="active"><a href="/">Главная</a></li>
-                    <li><a href="#about">Проекты</a></li>
-                    <li><a href="#contact">Контакты</a></li>
+                    <li><a href="projects.html">Проекты</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="span4"></div>
                         <div class="span4">
-                            <a class="btn btn-primary btn-large" style="float: right;" href="projects/androcoins.html">Узнать больше &raquo;</a>
+                            <a class="btn btn-primary btn-large" style="float: right;" href="projects.html#androcoins">Узнать больше &raquo;</a>
                         </div>
                     </div>
                 </p>
