--- a/projects.html
+++ b/projects.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
     <meta name="description" content="vitaly gashock android projects"/>
 
-    <link href="../css/main.css" rel="stylesheet">
-    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 60px;
             padding-bottom: 40px;
         }
     </style>
-    <link href="../css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
     <title>Android Developer - Projects</title>
 </head>
@@ -24,13 +24,13 @@
     <div class="navbar-inner">
         <div class="container">
 
-            <a class="brand" href="#">Vitaly Gashock</a>
+            <a class="brand" href="/">Vitaly Gashock</a>
 
             <div class="nav-collapse">
                 <ul class="nav">
                     <li><a href="/">Главная</a></li>
-                    <li class="active"><a href="#about">Проекты</a></li>
-                    <li><a href="#contact">Контакты</a></li>
+                    <li class="active"><a href="projects.html">Проекты</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
