--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
 
             <a class="brand" href="/">Vitaly Gashock</a>
 
-            <div class="nav-collapse">
+            <div class="nav-collapse pull-left">
                 <ul class="nav" style="font-size: 12pt;">
                     <li class="active"><a href="/">Главная</a></li>
                     <li><a href="projects.html">Проекты</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
+
+            <div class="nav-collapse pull-right">
+                <ul class="nav" style="font-size: 12pt;">
+                    <li><a href="about.html">Обо мне</a></li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </div>
