--- a/projects.html
+++ b/projects.html
@@ -26,11 +26,16 @@
 
             <a class="brand" href="/">Vitaly Gashock</a>
 
-            <div class="nav-collapse">
-                <ul class="nav">
+            <div class="nav-collapse pull-left">
+                <ul class="nav" style="font-size: 12pt;">
                     <li><a href="/">Главная</a></li>
                     <li class="active"><a href="projects.html">Проекты</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-collapse pull-right">
+                <ul class="nav" style="font-size: 12pt;">
+                    <li><a href="about.html">Обо мне</a></li>
                 </ul>
             </div>
         </div>
