imgs filename optimization

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
             <div class="row-fluid">
                 <div class="span3">
                     <a class="thumbnail" href="#androcoins">
-                        <img src="imgs/androcoins_dash_big.png" alt="AndroCoins Dashboard" />
+                        <img src="imgs/androcoins_dash.png" alt="AndroCoins Dashboard" />
                     </a>
                 </div>
                 <div class="span8">
@@ -71,7 +71,7 @@
                 <div class="row-fluid">
                     <div class="span3">
                         <a class="thumbnail-without-border" href="">
-                            <img src="imgs/androcoins_dash_big.png" alt="AndroCoins Dashboard" />
+                            <img src="imgs/androcoins_dash.png" alt="AndroCoins Dashboard" />
                         </a>
                     </div>
                     <div class="span8">
