--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <div class="row-fluid">
                     <div class="span4">
                         <div class="cropped_pics">
-                            <img src="imgs/androcoins_dash_crop.png"/>
-                            <img src="imgs/androcoins_new_expence_crop.png"/>
-                            <img src="imgs/androcoins_today_report_crop.png"/>
+                            <img src="imgs/a_dash_crop.png"/>
+                            <img src="imgs/a_exp_crop.png"/>
+                            <img src="imgs/a_today_rep_crop.png"/>
                         </div>
                     </div>
                     <div class="span8">
