--- a/projects.html
+++ b/projects.html
@@ -77,17 +77,17 @@
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/androcoins_dash.png" alt="AndroCoins Dashboard" />
+                                        <img src="imgs/a_dash.png" alt="AndroCoins Dashboard" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/androcoins_reports.png" alt="AndroCoins Dashboard" />
+                                        <img src="imgs/a_reps.png" alt="AndroCoins Dashboard" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/androcoins_dash_settings.png" alt="AndroCoins Dashboard" />
+                                        <img src="imgs/a_dash_settings.png" alt="AndroCoins Dashboard" />
                                     </a>
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/androcoins_new_expence.png" alt="AndroCoins New Expence" />
+                                        <img src="imgs/a_exp.png" alt="AndroCoins New Expence" />
                                     </a>
                                 </div>
                             </div>
@@ -124,14 +124,14 @@
                 <div class="row-fluid">
                     <div class="span3">
                         <a class="thumbnail-without-border" data-toggle="modal" data-target="#dashboardModal" href="#dashboardModal">
-                            <img src="imgs/androcoins_dash.png" alt="AndroCoins Dashboard" />
+                            <img src="imgs/a_dash.png" alt="AndroCoins Dashboard" />
                         </a>
                         <div class="modal hide" id="dashboardModal">
                             <div class="modal-header">
                                 <h3>Стартовый экран (Dashboard)</h3>
                             </div>
                             <div class="modal-body">
-                                <img style="width: 70%;" src="imgs/androcoins_dash.png" alt="AndroCoins Dashboard" />
+                                <img style="width: 70%;" src="imgs/a_dash.png" alt="AndroCoins Dashboard" />
                             </div>
                         </div>
                     </div>
