--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,7 @@
                 <div id="androcoinsCarousel" class="carousel slide project-carousel">
                     <!-- items -->
                     <div class="carousel-inner">
+                        <!-- dashboard -->
                         <div class="active item">
                             <div class="row-fluid">
                                 <div class="span4">
@@ -98,13 +99,81 @@
                                 Быстрый доступ к основным функциям и настройкам приложения</p>
                             </div>
                         </div>
+                        <!-- edit expence screen -->
                         <div class="item">
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_exp.png" alt="AndroCoins New Expence" />
+                                        <img src="imgs/a_exp.png" alt="AndroCoins Expence" />
                                     </a>
                                 </div>
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_exp_cat.png" alt="AndroCoins Expence" />
+                                    </a>
+                                </div>
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_exp_comment.png" alt="AndroCoins Expence" />
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="carousel-caption">
+                                <h4>Добавление записи о новом расходе</h4>
+                                <br/>
+                                <p>Добавление нового или редактирование существующего расхода.
+                                    Ввод комментария к расходу. Выбор категории расхода</p>
+                            </div>
+                        </div>
+                        <!-- categories screen -->
+                        <div class="item">
+                            <div class="row-fluid">
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_cats.png" alt="AndroCoins Categories" />
+                                    </a>
+                                </div>
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_cat_details.png" alt="AndroCoins Categories" />
+                                    </a>
+                                </div>
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_cats_edit.png" alt="AndroCoins Categories" />
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="carousel-caption">
+                                <h4>Категории расходов</h4>
+                                <br/>
+                                <p>Управление списком категорий расходов. Просмотр статистики по отдельной категории.</p>
+                            </div>
+                        </div>
+                        <!-- edit today and reports -->
+                        <div class="item">
+                            <div class="row-fluid">
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_today.png" alt="AndroCoins Reports" />
+                                    </a>
+                                </div>
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_rep_today.png" alt="AndroCoins Reports" />
+                                    </a>
+                                </div>
+                                <div class="span4">
+                                    <a class="thumbnail-without-border" href="#">
+                                        <img src="imgs/a_rep_week.png" alt="AndroCoins Reports" />
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="carousel-caption">
+                                <h4>Расходы: редактирование и статистика</h4>
+                                <br/>
+                                <p>Редактирование расходов за текущий день. Просмотр статистической информации о
+                                зарегистрированнх отчетах за разные периоды времени.</p>
                             </div>
                         </div>
                     </div>
