androcoins short summary

--- a/projects.html
+++ b/projects.html
@@ -59,16 +59,16 @@
                 <div class="row-fluid">
                     <div class="span6">
                         <h1 style="color: #336699;">AndroCoins</h1>
+                        <p>Android-приложение для простого управления карманными расходами</p>
                     </div>
                     <div class="span6">
                         <a href="http://play.google.com/store/apps/details?id=org.androcoins"
-                           target="_blank" style="float: right;">
+                           target="_blank" style="float: right;margin-top: 10px;">
                             <img alt="Android app on Google Play"
                                  src="http://www.android.com/images/brand/android_app_on_play_logo_small.png" />
                         </a>
                     </div>
                 </div>
-                <hr/>
                 <!-- project carousel -->
                 <div id="androcoinsCarousel" class="carousel slide project-carousel">
                     <!-- items -->
