--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 
         <script type="text/javascript" src="javascripts/jquery-1.8.0.min.js"></script>
         <script type="text/javascript" src="javascripts/bootstrap-carousel.js"></script>
+        <script type="text/javascript" src="javascripts/bootstrap-transition.js"></script>
 
         <style type="text/css">
             body {
@@ -24,7 +25,7 @@
         <script type="text/javascript">
             $(document).ready(function() {
                 $(".androcoinsCarousel").carousel({
-                    interval: 500;
+                    interval: 500
                 });
             });
         </script>
