--- a/projects.html
+++ b/projects.html
@@ -183,48 +183,10 @@
                     <a class="carousel-control right" href="#androcoinsCarousel" data-slide="next">&rsaquo;</a>
                 </div>
             </div>
-
-
-
-            <!-- AndroCoins project description -->
-            <!--
-            <div>
-                <h1 id="androcoins" >Проект <strong>AndroCoins</strong></h1>
-                <hr style="border: solid 2px #eee;"/>
-                <div class="row-fluid">
-                    <div class="span3">
-                        <a class="thumbnail-without-border" data-toggle="modal" data-target="#dashboardModal" href="#dashboardModal">
-                            <img src="imgs/a_dash.png" alt="AndroCoins Dashboard" />
-                        </a>
-                        <div class="modal hide" id="dashboardModal">
-                            <div class="modal-header">
-                                <h3>Стартовый экран (Dashboard)</h3>
-                            </div>
-                            <div class="modal-body">
-                                <img style="width: 70%;" src="imgs/a_dash.png" alt="AndroCoins Dashboard" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="span8">
-                        <h3>Стартовый экран (Dashboard)</h3>
-                       <br/>
-                        <blockquote>
-                            <ul>
-                                <br/>
-                                <li>Отображение суммы расходов, потраченных сегодня</li>
-                                <li>Предоставляет быстрый доступ к основным функциям приложения</li>
-                                <li>Быстрое создание нового расхода</li>
-                                <li>Переход на экран редактирования сегодняшних расходов</li>
-                                <li>Выбор нужного типа отчета</li>
-                                <li>Доступ к системным настройкам приложения</li>
-                                <br/>
-                            </ul>
-
-                        </blockquote>
-                    </div>
-                </div>
-            </div>
-            -->
+            <hr>
+            <footer>
+                <p>&copy; Vitaly Gashock 2012</p>
+            </footer>
         </div>
     </body>
 </html>
