new AndroCoins croped images for index.html

--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
                             <div class="row-fluid">
                                     <div class="span6">
                                         <div class="cropped_pics">
-                                            <img src="imgs/a_dash_crop.png"/>
-                                            <img src="imgs/a_exp_crop.png"/>
-                                            <img src="imgs/a_today_rep_crop.png"/>
+                                            <img src="imgs/new/a_appmenu_crop.png"/>
+                                            <img src="imgs/new/a_report_crop.png"/>
                                         </div>
                                     </div>
                                     <div class="span6">
@@ -94,7 +93,7 @@
                                         <br/>
                                         <ul>
                                             <li><strong>Простой и понятный интерфейс пользователя</strong></li>
-                                            <li><strong>Быстрый доступ к основным функциям со стартового экрана</strong></li>
+                                            <li><strong>Быстрый доступ к основным функциям из основного меню</strong></li>
                                             <li><strong>Возможность редактирования введенных расходов</strong></li>
                                             <li><strong>Настраиваемый список категорий расходов</strong></li>
                                             <li><strong>Построение отчетов о расходах</strong></li>
